--- a/manual/manual.tex
+++ b/manual/manual.tex
@@ -1,6 +1,6 @@
 \documentclass{scrreprt}
 \usepackage{pyx,tabularx,graphicx}
-\includeonly{graph} % for temporarily skipping of chapters
+% \includeonly{graph} % for temporarily skipping of chapters
 \setlength{\parindent}{0pt}
 \begin{document}
 \subject{\texttt{http://pyx.sourceforge.net/}}
