section sorting, 0.2 release ready
git-svn-id: https://pyx.svn.sourceforge.net/svnroot/pyx/trunk/pyx@607 069f4177-920e-0410-937b-c2a4a81bcd90

--- a/CHANGES
+++ b/CHANGES
@@ -23,7 +23,7 @@ PyX
     - extern variables and functions (support in graph.function, graph.paramfunction and data.data)
     - testsuite
   - text module:
-    - is it TODO for 0.2 ???
+    - deferred to Version 0.3
     - running TeX "on the fly" is basically implemented
   - numerous bugfixes (remove detailed list?):
     - transformation bug (#624068, trafo module)
