--- a/CHANGES
+++ b/CHANGES
@@ -1,6 +1,6 @@
 PyX
 
-0.2 (????/??/??):
+0.2 (2003/01/17):
   - unit module:
     - allow division of length by numbers
   - trafo module:
@@ -25,16 +25,15 @@ PyX
   - text module:
     - deferred to Version 0.3
     - running TeX "on the fly" is basically implemented
-  - numerous bugfixes (remove detailed list?):
+  - numerous bugfixes:
     - transformation bug (#624068, trafo module)
     - canvas transformations (canvas module???)
     - textbox alignment (graph module)
     - return linewidth upon calculation with linewidths (unit module)
     - allow column number variables with several digits
-    - numerous others ???
+    - ...
   - british and american spellings (color module, graph module)
   - small logo modifications
-
 
 0.1 (2002/10/07):
   - initial release
