Makefile; various minor adaptations
git-svn-id: https://pyx.svn.sourceforge.net/svnroot/pyx/trunk/pyx@617 069f4177-920e-0410-937b-c2a4a81bcd90

--- a/manual/manual.tex
+++ b/manual/manual.tex
@@ -4,7 +4,9 @@
 \setlength{\parindent}{0pt}
 \begin{document}
 \subject{\texttt{http://pyx.sourceforge.net/}}
-\title{\PyX{} 0.1\\User Manual}
+\title{\PyX{} 
+\input pyxversion.tex
+\\User Manual}
 \author{J\"org Lehmann \texttt{<joergl@users.sourceforge.net>}\and
 Andr\'e Wobst \texttt{<wobsta@users.sourceforge.net>}}
 \maketitle
