TeX part of the text module
git-svn-id: https://pyx.svn.sourceforge.net/svnroot/pyx/trunk/pyx@626 069f4177-920e-0410-937b-c2a4a81bcd90

--- a/CHANGES
+++ b/CHANGES
@@ -1,5 +1,9 @@
 PyX
 
+0.3 (????/??/??):
+  - unit box:
+    - new module for handling of convex polygons
+
 0.2 (????/??/??):
   - unit module:
     - allow division of length by numbers
