--- a/CHANGES
+++ b/CHANGES
@@ -2,7 +2,19 @@ PyX
 
 0.3 (????/??/??):
   - unit box:
-    - new module for handling of convex polygons
+    - new module for handling of convex polygons (taken out of the graph module)
+  - unit helper:
+    - collection of helper functions (taken out of the graph module)
+  - text module:
+    - to be included in 0.3 -> finish base functionality
+  - graph module:
+    - TODO: use text module instead of the obsolete tex module
+    - TODO: minimize code dublication in various painters
+  - numerous bugfixes:
+    - disable rating for labelattrs equals None (graph module)
+    - traverse when adding functions as arguments of operators (mathtree module)
+    - allow for extern functions in addcolumn (data module)
+    - ...
 
 0.2 (2003/01/17):
   - unit module:
