proper version handling
git-svn-id: https://pyx.svn.sourceforge.net/svnroot/pyx/trunk/pyx@640 069f4177-920e-0410-937b-c2a4a81bcd90

--- a/README
+++ b/README
@@ -1,5 +1,5 @@
-PyX 0.1
-=======
+PyX
+===
 
 PyX is a python package to create encapsulated PostScript figures. It provides
 classes and methods to access basic PostScript functionality at an abstract
