--- a/CHANGES
+++ b/CHANGES
@@ -1,24 +1,37 @@
 PyX
 
 0.3 (????/??/??):
+  - examples
+    - new easy to use example generation (will hopefully lead to nice examples)
   - unit box:
     - new module for handling of convex polygons (taken out of the graph module)
   - unit helper:
     - collection of helper functions (taken out of the graph module)
   - text module:
     - to be included in 0.3 -> finish base functionality
+  - t1strip module:
+    - strip glyphs from pfa/pfb-fonts
+    - there is a C implementation taken from pdftex
+    - fallback solution via an external program (pfb2pfa --- included in teTeX???, not in MikTeX???)
+  - pykpathsea module:
+    - (partial) C binding to libkpathsea
+    - fallback solution via an external program (kpsewhich)
   - graph module:
     - removed some code duplication (various axis painters)
     - use text module instead of the obsolete tex module (work in progress)
     - TODO: allow for tailing zeros of automatic generated labels
     - TODO: allow for missing data in bar graphs
+    - TODO: graph keys
+    - TODO: 3d graphs should be scheduled for pyx-0.4
   - data module:
     - TODO: line reduction for datafile like the every parameter in gnuplot
   - numerous bugfixes:
     - problem with sizefile on windows (tex module)
+    - allow for strings in graphxy's width and height; allow for width only (graph module)
     - disable rating for labelattrs equals None (graph module)
     - traverse when adding functions as arguments of operators (mathtree module)
     - allow for extern functions in addcolumn (data module)
+    - just one common place for the version number
     - ...
 
 0.2 (2003/01/17):
